--- a/Models/SpeechLM_TTS/2025.09.29_VoxCPM.md
+++ b/Models/SpeechLM_TTS/2025.09.29_VoxCPM.md
@@ -28,18 +28,29 @@
 
 </details>
 
-## Abstract
+## Abstract: 摘要
 
+<!--
 Generative models for speech synthesis face a fundamental trade-off: discrete tokens ensure stability but sacrifice expressivity, while continuous signals retain acoustic richness but suffer from error accumulation due to task entanglement.
 This challenge has driven the field towards multi-stage pipelines that rely on pre-trained speech tokenizers, but these create a semantic-acoustic divide, limiting holistic and expressive speech generation.
 We resolve these dilemma through hierarchical semantic-acoustic modeling with semi-discrete residual representations and present a novel tokenizer-free TTS model--***VoxCPM***.
-Our framework introduces a differentiable quantization bottleneck that induces natural specialization:
-a Text-Semantic Language Model (TSLM) generates semantic-prosodic plans, while a Residual Acoustic Model (RALM) recovers fine-grained acoustic details.
+Our framework introduces a differentiable quantization bottleneck that induces natural specialization: a Text-Semantic Language Model (TSLM) generates semantic-prosodic plans, while a Residual Acoustic Model (RALM) recovers fine-grained acoustic details.
 This hierarchical semantic-acoustic representation guides a local diffusion-based decoder to generate high-fidelity speech latents.
 Critically, the entire architecture is trained end-to-end under a simple diffusion objective, eliminating dependency on external speech tokenizers.
 Trained on a massive 1.8 million hours of bilingual corpus, our ***VoxCPM-0.5B*** model achieves state-of-the-art zero-shot TTS performance among open-source systems, demonstrating that our approach delivers expressive and stable synthesis.
-Besides, VoxCPM shows the capability to comprehend text to infer and generate appropriate prosody and style, delivering speech with context-aware expressiveness and natural flow.
+Besides, ***VoxCPM*** shows the capability to comprehend text to infer and generate appropriate prosody and style, delivering speech with context-aware expressiveness and natural flow.
 To facilitate community-driven research and development, ***VoxCPM*** is publicly accessible under Apache 2.0.
+-->
+语音合成的生成式模型面临一个根本性权衡: 离散 Token 确保稳定性但牺牲了表现力, 连续信号保留了声学丰富性但由于任务耦合容易出现误差累积.
+这一挑战使得研究转向依赖预训练语音分词器的多阶段流水线, 但这类方法造成了语义和声学之间的割裂, 限制了整体性和富有表现力的语音生成.
+我们通过半离散残差表示的层次化语义-声学建模解决这些困境, 并提出了一个新的无分词器的 TTS 模型: ***VoxCPM**.
+我们的框架引入了一个可微分的量化瓶颈引入自然的专业化: 文本-语义语言模型 (Text-Semantic Language Model, TSLM) 生成语义-韵律规划, 而残差声学模型 (Residual Acoustic Model, RALM) 恢复细粒度的声学细节.
+这一层次化语义-声学表示引导局部的基于扩散的解码器以生成高保真的语音隐变量.
+关键的是整个架构以端到端的方式, 在简单的扩散目标下进行训练, 消除了对额外语音分词器的依赖.
+
+在 180w 小时的双语语料库上训练, 我们的 ***VoxCPM-0.5B*** 模型在开源系统中达到了 SoTA 的零样本 TTS 性能, 表明了该方法兼具表现力和稳定形.
+此外, ***VoxCPM*** 展示了能够理解文本以推理和生成合适韵律和风格的能力, 输出具有内容感知表现力和自然流畅度的语音.
+为了促进社区驱动的研究和开发, ***VoxCPM*** 在 Apache2.0 许可下公开发布.
 
 ## 1·Introduction
 
@@ -70,7 +81,8 @@ In this work, we introduce a tokenizer-free, end-to-end framework that resolves 
 Our key insight is that holistic and expressive speech synthesis requires explicit architectural separation between semantic-prosodic planning and acoustic rendering, yet should remain within a cohesive, end-to-end trainable system.
 The core innovation is a differentiable Finite Scalar Quantization (FSQ) [^MentzerFinite] bottleneck that induces natural specialization:
 (1) a Text-Semantic Language Model (TSLM) generates semantic-prosodic plans stabilized through quantization, focusing on linguistically meaningful patterns;
-and (2) a Residual Acoustic Language Model (RALM) recovers fine-grained details lost during quantization, specializing in acoustic refinement.
+(2) a Residual Acoustic Language Model (RALM) recovers fine-grained details lost during quantization, specializing in acoustic refinement.
+
 This hierarchical design enables each component to excel at its respective role while maintaining differentiability, and both of them will be used to guide a local diffusion decoder to generate high-fidelity speech latents.
 Critically, the entire hierarchical model is trained end-to-end under a simple diffusion objective, seamlessly integrating planning and rendering without pre-trained tokenizers.
 Trained on a massive 1.8 million hours of bilingual corpus, our ***VoxCPM***-0.5B model achieves state-of-the-art zero-shot TTS performance among open-source systems, demonstrating that our approach delivers expressive and stable synthesis.
@@ -96,13 +108,11 @@ Besides, VoiceCraft [^Peng2024VoiceCraft] and XTTS [^Casanova2024Xtts] further a
 
 Recent advancements have focused on enhancing the scalability, controllability and zero-shot adaptation.
 CosyVoice [^Du2024Cosyvoice] proposed supervised semantic tokens for improved zero-shot performance, while its successors,
-CosyVoice 2 and 3 [^Du2024Cosyvoice], [^Du2025Cosyvoice]
-incorporated text-based LLM initialization, streaming synthesis, and large-scale training data for human-parity quality, low latency and in-the-wild scenarios.
+**CosyVoice2**[^Du2024CosyVoice2], **CosyVoice3**[^Du2025Cosyvoice] incorporated text-based LLM initialization, streaming synthesis, and large-scale training data for human-parity quality, low latency and in-the-wild scenarios.
 IndexTTS [^Deng2025Indextts] and IndexTTS2 [^Zhou2025IndexTTS2] introduced precise duration and emotion control in autoregressive token generation, enabling applications with strict timing and expressivity requirements.
 SparkTTS [^Wang2025Spark-TTS] utilized single-stream decoupled speech tokens for modeling efficiency, and FireRedTTS [^Guo2024Fireredtts] along with its update FireRedTTS-2 [^Xie2025FireRedTTS-2] established frameworks for industry-level generative speech, including long-form multi-speaker dialogue.
 Openaudio-s1 [^OpenAudio2024OpenAudio] used dual AR architecture and online Reinforcement Learning from Human Feedback (RLHF) to improve expressiveness and instruction-following capabilities.
-Higgs Audio v2 [^BosonAI2025Higgs] proposed a unified audio tokenizer captures
-both semantic and acoustic features, and  pretrained on over 10 million hours of audio data, providing a powerful foundation model.
+Higgs Audio v2 [^BosonAI2025Higgs] proposed a unified audio tokenizer captures both semantic and acoustic features, and  pretrained on over 10 million hours of audio data, providing a powerful foundation model.
 Despite these progresses, discrete approaches suffer from inherent quantization artifacts, limiting acoustic fidelity and prompting hybrid solutions.
 
 ### Continuous Representation TTS
@@ -156,8 +166,7 @@ This distinction allows us to avoid the vocabulary explosion problem while still
 
 ### Model Overview
 
-VoxCPM employs a hierarchical autoregressive architecture that generates sequences of continuous speech latents $\mathbf{Z} = \{\mathbf{z}_1, ..., \mathbf{z}_M\}$ conditioned on input text tokens $\mathbf{T} = \{t_1, ..., t_N\}$,
-where each $\mathbf{z}_i \in \mathbb{R}^{P \times D}$ represents a patch of $P$ frames with $D$-dimensional VAE latent vectors.
+VoxCPM employs a hierarchical autoregressive architecture that generates sequences of continuous speech latents $\mathbf{Z} = \{\mathbf{z}_1, ..., \mathbf{z}_M\}$ conditioned on input text tokens $\mathbf{T} = \{t_1, ..., t_N\}$, where each $\mathbf{z}_i \in \mathbb{R}^{P \times D}$ represents a patch of $P$ frames with $D$-dimensional VAE latent vectors.
 The generation process follows:
 
 $$
