--- a/Models/SpeechLM_TTS/2024.01.25_VALL-T.md
+++ b/Models/SpeechLM_TTS/2024.01.25_VALL-T.md
@@ -20,7 +20,7 @@
   - [Github](https://github.com/cpdu/vallt)
   - [Demo](http://cpdu.github.io/vallt)
 - 文件:
-  - [ArXiv](../_PDF/2401.14321v5__VALL-T__Decoder-Only_Generative_Transducer_for_Robust_and_Decoding-Controllable_Text-to-Speech.pdf)
+  - [ArXiv](../SpeechLM/_PDF/2401.14321v5__VALL-T__Decoder-Only_Generative_Transducer_for_Robust_and_Decoding-Controllable_Text-to-Speech.pdf)
   - [Publication] #TODO
 
 </details>
@@ -269,23 +269,23 @@ Threfore, this model eliminates the need for acquiring phoneme durations before 
 
 ## References: 参考文献
 
-[^01]: [FastSpeech2](../../Acoustic/2020.06.08_FastSpeech2.md)
-[^02]: [Grad-TTS](../../Acoustic/2021.05.13_Grad-TTS.md)
-[^03]: [UniCATS](../../Diffusion/2023.06.13_UniCATS.md)
-[^04]: [NaturalSpeech2](../../Diffusion/2023.04.18_NaturalSpeech2.md)
-[^05]: [GSLM](../S2S/2021.02.01_GSLM.md)
-[^06]: [VQTTS](../../E2E/2022.04.02_VQTTS.md)
-[^07]: [GPT-3](../../TextLM/2020.05.28_GPT-3.md)
-[^08]: [LLaMA2](../../TextLM/2023.07.18_LLaMA2.md)
-[^09]: [TorToise-TTS](../../Diffusion/2023.05.12_TorToise-TTS.md)
-[^10]: [SPEAR-TTS](2023.02.07_SPEAR-TTS.md)
+[^01]: [FastSpeech2](../Acoustic/2020.06.08_FastSpeech2.md)
+[^02]: [Grad-TTS](../Acoustic/2021.05.13_Grad-TTS.md)
+[^03]: [UniCATS](../Diffusion/2023.06.13_UniCATS.md)
+[^04]: [NaturalSpeech2](../Diffusion/2023.04.18_NaturalSpeech2.md)
+[^05]: [GSLM](../SpeechLM/PureSpeechLM/2021.02.01_GSLM.md)
+[^06]: [VQTTS](../E2E/2022.04.02_VQTTS.md)
+[^07]: [GPT-3](../TextLM/2020.05.28_GPT-3.md)
+[^08]: [LLaMA2](../TextLM/2023.07.18_LLaMA2.md)
+[^09]: [TorToise-TTS](../Diffusion/2023.05.12_TorToise-TTS.md)
+[^10]: [SPEAR-TTS](../../SpeechLM_TTS/2023.02.07_SPEAR-TTS.md.02.07_SPEAR-TTS.md)
 [^11]: [VALL-E](2023.01.05_VALL-E.md)
-[^12]: [Transducer/RNN-T](../../ASR/2012.11.14_RNN-T.md)
+[^12]: [Transducer/RNN-T](../-ASR/2012.11.14_RNN-T.md)
 [^13]: Streaming End-To-End Speech Recognition for Mobile Devices.
-[^14]: [Transformer](../../_Transformer/2017.06.12_Transformer.md)
+[^14]: [Transformer](../_Basis/2017.06.12_Transformer.md)
 [^15]: [EnCodec](../../SpeechCodec/2022.10.24_EnCodec.md)
-[^16]: [BPE](../../_Basis/2015.08.31_BPE.md)
-[^17]: [LibriTTS](../../../Datasets/2019.04.05_LibriTTS.md)
-[^18]: [ScaleAdam/Eden/Zipformer](../../../Modules/Optimization/2023.10.17_ScaledAdam.md)
+[^16]: [BPE](../_Basis/2015.08.31_BPE.md)
+[^17]: [LibriTTS](../../Datasets/2019.04.05_LibriTTS.md)
+[^18]: [ScaleAdam/Eden/Zipformer](../../Modules/Optimization/2023.10.17_ScaledAdam.md)
 [^19]: Transduce and Speak: Neural Transducer for Text-To-Speech with Semantic Token Prediction.
-[^20]: [Whisper](../../ASR/2022.12.06_Whisper.md)
+[^20]: [Whisper](../-ASR/2022.12.06_Whisper.md)
