--- a/Models/SpeechLM_TTS/2024.06.07_XTTS.md
+++ b/Models/SpeechLM_TTS/2024.06.07_XTTS.md
@@ -22,7 +22,7 @@
   - [Github](https://github.com/coqui-ai/TTS/tree/main)
   - [Demo](https://edresson.github.io/XTTS/)
 - 文件:
-  - [ArXiv](_PDF/2406.04904v1__XTTS__A_Massively_Multilingual_Zero-Shot_Text-to-Speech_Model.pdf)
+  - [ArXiv](../SpeechLM/_PDF/2406.04904v1__XTTS__A_Massively_Multilingual_Zero-Shot_Text-to-Speech_Model.pdf)
   - [Publication] #TODO
 
 </details>
