--- a/Models/SpeechLM_TTS/2024.09.05_FireRedTTS.md
+++ b/Models/SpeechLM_TTS/2024.09.05_FireRedTTS.md
@@ -18,7 +18,7 @@
   - [Github](https://github.com/FireRedTeam/FireRedTTS)
   - [Demo](https://fireredteam.github.io/demos/firered_tts)
 - 文件:
-  - [ArXiv](_PDF/2409.03283v1__FireRedTTS__A_Foundation_Text-To-Speech_Framework_for_Industry-Level_Generative_Speech_Applications.pdf)
+  - [ArXiv](../SpeechLM/_PDF/2409.03283v1__FireRedTTS__A_Foundation_Text-To-Speech_Framework_for_Industry-Level_Generative_Speech_Applications.pdf)
   - [Publication] #TODO
 
 </details>
