--- a/Models/SpeechLM_TTS/2025.02.16_FELLE.md
+++ b/Models/SpeechLM_TTS/2025.02.16_FELLE.md
@@ -23,7 +23,7 @@
   - [Github]()
   - [Demo](https://aka.ms/felle)
 - 文件:
-  - [ArXiv](../_PDF/2502.11128v1__FELLE__Autoregressive_Speech_Synthesis_with_Token-Wise_Coarse-to-Fine_Flow_Matching.pdf)
+  - [ArXiv](../SpeechLM/_PDF/2502.11128v1__FELLE__Autoregressive_Speech_Synthesis_with_Token-Wise_Coarse-to-Fine_Flow_Matching.pdf)
   - [Publication] #TODO
 
 </details>
@@ -339,7 +339,7 @@ The main components of the approach are described in detail below.
 </td></tr>
 <tr><td colspan="2">
 
-![](../Images/2025.02.16_FELLE_Fig.01.png)
+![](../SpeechLM/Images/2025.02.16_FELLE_Fig.01.png)
 
 </td></tr>
 <tr><td>
@@ -391,7 +391,7 @@ A detailed introduction will be given below.
 </td></tr>
 <tr><td colspan="2">
 
-![](../Images/2025.02.16_FELLE_Fig.02.png)
+![](../SpeechLM/Images/2025.02.16_FELLE_Fig.02.png)
 
 </td></tr>
 <tr><td>
@@ -640,35 +640,35 @@ Experimental results show that our model consistently outperforms several baseli
 
 ## References: 参考文献
 
-[^01]: [**GPT-3**: Language Models Are Few-Shot Learners.](../../TextLM/2020.05.28_GPT-3.md) NeurIPS2020.
-[^02]: [**GPT-4**: GPT-4 Technical Report.](../../TextLM/2023.03.15_GPT-4.md) ArXiv:2303.08774.
-[^03]: [**Gemini 1.5**: Unlocking Multimodal Understanding Across Millions of Tokens of Context.](../../TextLM/2024.03.08_Gemini_1.5.md) ArXiv:2403.05530.
+[^01]: [**GPT-3**: Language Models Are Few-Shot Learners.](../TextLM/2020.05.28_GPT-3.md) NeurIPS2020.
+[^02]: [**GPT-4**: GPT-4 Technical Report.](../TextLM/2023.03.15_GPT-4.md) ArXiv:2303.08774.
+[^03]: [**Gemini 1.5**: Unlocking Multimodal Understanding Across Millions of Tokens of Context.](../TextLM/2024.03.08_Gemini_1.5.md) ArXiv:2403.05530.
 [^04]: [**VALL-E**: Neural Codec Language Models Are Zero-Shot Text to Speech Synthesizers.](2023.01.05_VALL-E.md) ArXiv:2301.02111.
-[^05]: [**VALL-E 2**: Neural Codec Language Models Are Human Parity Zero-Shot Text to Speech Synthesizers.](2024.06.08_VALL-E_2.md) ArXiv:2406.05370.
+[^05]: [**VALL-E 2**: Neural Codec Language Models Are Human Parity Zero-Shot Text to Speech Synthesizers.](../../SpeechLM_TTS/2024.06.08_VALL-E_2.md4.06.08_VALL-E_2.md) ArXiv:2406.05370.
 [^06]: Discrete Audio Representation as an Alternative to Mel-Spectrograms for Speaker and Speech Recognition. ICASSP2024.
-[^07]: [**MELLE**: Autoregressive Speech Synthesis without Vector Quantization.](2024.07.11_MELLE.md) ArXiv:2407.08551.
-[^08]: [**SALAD**: Continuous Speech Synthesis Using Per-Token Latent Diffusion.](../../Diffusion/2024.10.21_SALAD.md) ArXiv:2410.16048.
+[^07]: [**MELLE**: Autoregressive Speech Synthesis without Vector Quantization.](../../SpeechLM_TTS/2024.07.11_MELLE.md2024.07.11_MELLE.md) ArXiv:2407.08551.
+[^08]: [**SALAD**: Continuous Speech Synthesis Using Per-Token Latent Diffusion.](../Diffusion/2024.10.21_SALAD.md) ArXiv:2410.16048.
 [^09]: [**KALL-E**: Autoregressive Speech Synthesis with Next-Distribution Prediction.](2024.12.22_KALL-E.md) ArXiv:2412.16846.
-[^10]: [**MelNet**: A Generative Model for Audio in the Frequency Domain.](../../Acoustic/2019.06.04_MelNet.md) ArXiv:1906.01083.
+[^10]: [**MelNet**: A Generative Model for Audio in the Frequency Domain.](../Acoustic/2019.06.04_MelNet.md) ArXiv:1906.01083.
 [^11]: Revisiting Over-Smoothness in Text to Speech. ACL2022.
-[^12]: [**VAE**: Auto-Encoding Variational Bayes.](../../_Basis/VAE.md) ICLR2014.
+[^12]: [**VAE**: Auto-Encoding Variational Bayes.](../_Basis/VAE.md) ICLR2014.
 [^13]: VAE with a VampPrior. AISTATS2018.
 [^14]: Explicitly Minimizing the Blur Error of Variational Autoencoders. ICLR2023.
-[^15]: [**VALL-E R**: Robust and Efficient Zero-Shot Text-to-Speech Synthesis via Monotonic Alignment.](2024.06.12_VALL-E_R.md) ArXiv:2406.07855.
-[^16]: [**Flow Matching**: Flow Matching for Generative Modeling](../../Diffusion/2022.10.06_Flow_Matching.md) ArXiv:2210.02747.
-[^17]: [**AudioLM**: A Language Modeling Approach to Audio Generation.](2022.09.07_AudioLM.md) TASLP2023.
-[^18]: [**Moshi**: A Speech-Text Foundation Model for Real-Time Dialogue.](../Interaction/2024.09.17_Moshi.md) ArXiv:2410.00037.
-[^19]: [**LibriSpeech**: An ASR Corpus Based on Public Domain Audio Books.](../../../Datasets/2015.04.19_LibriSpeech.md) ICASSP2015.
-[^20]: [**SPEAR-TTS**: Speak, Read and Prompt: High-Fidelity Text-to-Speech with Minimal Supervision.](2023.02.07_SPEAR-TTS.md) TACL2023.
-[^21]: [**IST-LM**: Interleaved Speech-Text Language Models Are Simple Streaming Text to Speech Synthesizers.](2024.12.20_IST-LM.md) ArXiv:2412.16102.
-[^22]: [**NaturalSpeech3**: Zero-Shot Speech Synthesis with Factorized Codec and Diffusion Models.](../../Diffusion/2024.03.05_NaturalSpeech3.md) ICML2024.
-[^23]: [**F5-TTS**: A Fairytaler that Fakes Fluent and Faithful Speech with Flow Matching.](../../Diffusion/2024.10.09_F5-TTS.md) ArXiv:2410.06885.
+[^15]: [**VALL-E R**: Robust and Efficient Zero-Shot Text-to-Speech Synthesis via Monotonic Alignment.](../../SpeechLM_TTS/2024.06.12_VALL-E_R.md4.06.12_VALL-E_R.md) ArXiv:2406.07855.
+[^16]: [**Flow Matching**: Flow Matching for Generative Modeling](../../FlowMatching/2022.10.06_Flow_Matching.md
+[^17]: [**AudioLM**: A Language Modeling Approach to Audio Generation.](../PureSpeechLM/2022.09.07_AudioLM.md) TASLP2023.
+[^18]: [**Moshi**: A Speech-Text Foundation Model for Real-Time Dialogue.](../SpeechLM/Interaction/2024.09.17_Moshi.md) ArXiv:2410.00037.
+[^19]: [**LibriSpeech**: An ASR Corpus Based on Public Domain Audio Books.](../../Datasets/2015.04.19_LibriSpeech.md) ICASSP2015.
+[^20]: [**SPEAR-TTS**: Speak, Read and Prompt: High-Fidelity Text-to-Speech with Minimal Supervision.](../../SpeechLM_TTS/2023.02.07_SPEAR-TTS.md.02.07_SPEAR-TTS.md) TACL2023.
+[^21]: [**IST-LM**: Interleaved Speech-Text Language Models Are Simple Streaming Text to Speech Synthesizers.](../SpeechLM/ST2S/2024.12.20_IST-LM.md) ArXiv:2412.16102.
+[^22]: [**NaturalSpeech3**: Zero-Shot Speech Synthesis with Factorized Codec and Diffusion Models.](../Diffusion/2024.03.05_NaturalSpeech3.md) ICML2024.
+[^23]: [**F5-TTS**: A Fairytaler that Fakes Fluent and Faithful Speech with Flow Matching.](../../FlowMatching/2024.10.09_F5-TTS.md.md) ArXiv:2410.06885.
 [^24]: [**VALL-E X**: Speak Foreign Languages with Your Own Voice: Cross-Lingual Neural Codec Language Modeling.](2023.03.07_VALL-E_X.md) ArXiv:2303.03926.
-[^25]: [**ELLA-V**: Stable Neural Codec Language Modeling with Alignment-Guided Sequence Reordering.](2024.01.14_ELLA-V.md) ArXiv2024.
+[^25]: [**ELLA-V**: Stable Neural Codec Language Modeling with Alignment-Guided Sequence Reordering.](../../SpeechLM_TTS/2024.01.14_ELLA-V.md024.01.14_ELLA-V.md) ArXiv2024.
 [^26]: [**RALL-E**: Robust Codec Language Modeling with Chain-of-Thought Prompting for Text-to-Speech Synthesis.](2024.04.04_RALL-E.md) ArXiv:2404.03204.
-[^27]: [**Cosyvoice**: A Scalable Multilingual Zero-Shot Text-to-Speech Synthesizer Based on Supervised Semantic Tokens.](2024.07.07_CosyVoice.md) ArXiv:2407.05407.
-[^28]: [**VoiceBox**: Text-Guided Multilingual Universal Speech Generation at Scale.](../../Diffusion/2023.06.23_Voicebox.md) NeurIPS2024.
-[^29]: [**Matcha-TTS**: A Fast TTS Architecture with Conditional Flow Matching.](../../Diffusion/2023.09.06_Matcha-TTS.md) ICASSP2024.
-[^30]: [**SpeechGPT**: Empowering Large Language Models with Intrinsic Crossmodal Conversational Abilities.](../Interaction/2023.05.18_SpeechGPT.md) EMNLP2023.
-[^31]: [**CFG**: Classifier-Free Diffusion Guidance.](../../Diffusion/2022.07.26_Classifier-Free_Guidance.md) NeurIPS2021.
-[^32]: [**iDDPM**: Improved Denoising Diffusion Probabilistic Models.](../../Diffusion/2021.02.18_iDDPM.md) ICML2021.
+[^27]: [**Cosyvoice**: A Scalable Multilingual Zero-Shot Text-to-Speech Synthesizer Based on Supervised Semantic Tokens.](../../SpeechLM_TTS/2024.07.07_CosyVoice.md.07.07_CosyVoice.md) ArXiv:2407.05407.
+[^28]: [**VoiceBox**: Text-Guided Multilingual Universal Speech Generation at Scale.](../../FlowMatching/2023.06.23_Voicebox.md.md) NeurIPS2024.
+[^29]: [**Matcha-TTS**: A Fast TTS Architecture with Conditional Flow Matching.](../../FlowMatching/2023.09.06_Matcha-TTS.md.md) ICASSP2024.
+[^30]: [**SpeechGPT**: Empowering Large Language Models with Intrinsic Crossmodal Conversational Abilities.](../SpeechLM/Interaction/2023.05.18_SpeechGPT.md) EMNLP2023.
+[^31]: [**CFG**: Classifier-Free Diffusion Guidance.](../Diffusion/_2022.07.26_Classifier-Free_Guidance.md) NeurIPS2021.
+[^32]: [**iDDPM**: Improved Denoising Diffusion Probabilistic Models.](../../Diffusion/_2021.02.18_iDDPM.mdd) ICML2021.
