--- a/Models/SpeechLM_TTS/2025.09.29_VoxCPM.md
+++ b/Models/SpeechLM_TTS/2025.09.29_VoxCPM.md
@@ -143,14 +143,25 @@ Besides, we release the codes and models publicly to support community developme
 
 ## 2·Background: 背景
 
-### Discrete Token-Based TTS
+### Discrete Token-Based TTS: 基于离散 Token 的 TTS
 
+<!--
 The discrete token paradigm has emerged as a dominant approach in modern TTS, leveraging the success of large language models.
 This method converts speech into discrete representations using neural audio codecs such as **EnCodec**[^Defossez2022EnCodec] and **DAC**[^Kumar2023DAC] through residual vector quantization (RVQ).
 **AudioLM**[^Borsos2022AudioLM] and **VALL-E**[^Wang2023VALL-E] pioneered this direction by framing audio generation and TTS as an autoregressive sequence prediction task over discrete acoustic tokens.
 Subsequent developments include **SoundStorm**[^Borsos2023SoundStorm], which introduced non-autoregressive generation for improved efficiency, and **SPEAR-TTS**[^Kharitonov2023SPEAR-TTS], which focused on multilingual capabilities with minimum supervision.
 Besides, **VoiceCraft**[^Peng2024VoiceCraft] and **XTTS**[^Casanova2024XTTS] further advanced zero-shot TTS with in-context learning.
+-->
+离散 Token 范式已成为现代 TTS 中的主流方法, 其成功很大程度上得益于大语言模型的发展.
+该方法利用神经音频编解码器 (如 **EnCodec**[^Defossez2022EnCodec] 和 **DAC**[^Kumar2023DAC])，通过残差矢量量化 (Residual Vector Quantization, RVQ) 将语音转换为离散表示.
+- **AudioLM**[^Borsos2022AudioLM] 与 **VALL-E**[^Wang2023VALL-E] 首次开创了这一方向, 将音频生成和 TTS 建模为对离散声学 Token 的自回归序列预测任务.
 
+随后的研究进一步拓展了该范式:
+- **SoundStorm**[^Borsos2023SoundStorm] 引入了非自回归生成机制, 显著提升了推理效率;
+- **SPEAR-TTS**[^Kharitonov2023SPEAR-TTS] 则聚焦于在极少量监督条件下实现多语言能力.
+- **VoiceCraft**[^Peng2024VoiceCraft] 与 **XTTS**[^Casanova2024XTTS] 通过上下文学习进一步推动了零样本 TTS 的性能边界.
+
+<!--
 Recent advancements have focused on enhancing the scalability, controllability and zero-shot adaptation.
 **CosyVoice**[^Du2024CosyVoice] proposed supervised semantic tokens for improved zero-shot performance, while its successors, **CosyVoice2**[^Du2024CosyVoice2], **CosyVoice3**[^Du2025CosyVoice3] incorporated text-based LLM initialization, streaming synthesis, and large-scale training data for human-parity quality, low latency and in-the-wild scenarios.
 **IndexTTS**[^Deng2025IndexTTS] and **IndexTTS2**[^Zhou2025IndexTTS2] introduced precise duration and emotion control in autoregressive token generation, enabling applications with strict timing and expressivity requirements.
@@ -158,28 +169,54 @@ Recent advancements have focused on enhancing the scalability, controllability a
 **OpenAudioS1**[^OpenAudio2025OpenAudioS1] used dual AR architecture and online Reinforcement Learning from Human Feedback (RLHF) to improve expressiveness and instruction-following capabilities.
 **HiggsAudioV2**[^BosonAI2025HiggsAudioV2] proposed a unified audio tokenizer captures both semantic and acoustic features, and  pretrained on over 10 million hours of audio data, providing a powerful foundation model.
 Despite these progresses, discrete approaches suffer from inherent quantization artifacts, limiting acoustic fidelity and prompting hybrid solutions.
+-->
+近期的研究进展聚焦于提升可扩展性, 可控性以及零样本适应能力.
+- **CosyVoice**[^Du2024CosyVoice] 提出了监督语义 token 以提升零样本性能;
+- 其后续版本 **CosyVoice2**[^Du2024CosyVoice2] 与 **CosyVoice3**[^Du2025CosyVoice3] 进一步引入了基于文本的大语言模型（LLM）初始化, 流式合成机制以及大规模训练数据, 从而在真实场景中实现媲美人声的音质, 低延迟和高鲁棒性.
+- **IndexTTS**[^Deng2025IndexTTS] 与 **IndexTTS2**[^Zhou2025IndexTTS2] 在自回归 Token 生成中引入了精确的时长与情感控制, 适用于对时序精度和表现力要求严苛的应用场景.
+- **Spark-TTS**[^Wang2025Spark-TTS] 采用单流解耦的语音 Token 以提升建模效率;
+- **FireRedTTS**[^Guo2024FireRedTTS] 及其升级版 **FireRedTTS-2**[^Xie2025FireRedTTS-2] 构建了面向工业级语音生成的框架, 支持长篇幅多说话人的对话合成.
+- **OpenAudioS1**[^OpenAudio2025OpenAudioS1] 采用双自回归架构, 并结合在线人类反馈强化学习, 以增强语音的表现力与指令遵循能力.
+- **HiggsAudioV2**[^BosonAI2025HiggsAudioV2] 提出了一种统一的音频分词器, 能够同时捕捉语义与声学特征, 并在超过一千万小时的音频数据上进行预训练, 构建了一个强大的基座模型.
 
-### Continuous Representation TTS
+尽管取得了上述进展, 离散化方法仍受制于固有的量化伪影, 限制了声学保真度, 从而催生了混合解决方案.
 
+### Continuous Representation TTS: 基于连续表示的 TTS
+
+<!--
 To circumvent quantization losses in discrete models, continuous representation approaches directly model speech features such as mel-spectrograms or audio latents.
 Early systems like **Tacotron2**[^Shen2017Tacotron2] established the encoder-decoder framework for text-to-mel mapping, while **FastSpeech2**[^Ren2020FastSpeech2] introduced explicit duration modeling for alignment stability.
 Inspired from **VALL-E**, **MELLE**[^Meng2024MELLE] autoregressively generated continuous mel-spectrogram frames directly from text condition, and incorporated variational inference to facilitate sampling mechanisms.
-
 Recent developments have integrated diffusion processes to enhance detail and diversity.
-
 Non-autoregressive models like **NaturalSpeech2**[^Shen2023NaturalSpeech] and **VoiceBox**[^Le2023VoiceBox] apply diffusion directly on continuous representations.
 **F5-TTS**[^Chen2024F5-TTS] advanced flow-matching for efficient synthesis.
-
 Autoregressive paradigms, often superior in prosody and variation, additionally possess the capability for streaming synthesis.
 Innovations like **ARDiT**[^Liu2024ARDiT] use an autogressive diffusion transformer for TTS, unifying semantic coherence and acoustic naturalness via parameter sharing.
 **DiTAR**[^Jia2025DiTAR] extended this with a patch-based design: a causal LM for inter-patch stability and a bidirectional local diffusion transformer for intra-patch refinement.
 **VibeVoice**[^Peng2025VibeVoice] employed next-token diffusion for long-form multi-speaker synthesis.
 Besides, recent models such as **CLEAR**[^Wu2025CLEAR] and **FELLE**[^Wang2025FELLE] focus on latent autoregressive modeling with token-wise coarse-to-fine hierarchies, while **MELA-TTS**[^An2025MELA-TTS] and **KALL-E**[^Xia2024KALL-E] combine joint transformer-diffusion with next-distribution prediction for improved efficiency and quality.
-
 Despite these advances, continuous models often entangle high-level semantic planning with low-level acoustic rendering, leading to instability in long sequences without explicit separation.
+-->
+为规避离散模型中的量化损失, 连续表示方法直接对语音特征 (如梅尔频谱图或音频潜在表示) 进行建模.
+早期系统如 **Tacotron2**[^Shen2017Tacotron2] 建立了文本到梅尔频谱的编码器-解码器框架, 而 **FastSpeech2**[^Ren2020FastSpeech2] 引入了显式的时长建模以提升对齐稳定性.
+受 **VALL-E** 启发, **MELLE**[^Meng2024MELLE] 从文本条件直接自回归生成连续的梅尔频谱帧, 并引入变分推断以优化采样机制.
 
-### Hierarchical and Residual Modeling in TTS
+近期研究进一步整合扩散过程, 以增强细节表现与多样性.
+- 非自回归模型如 **NaturalSpeech2**[^Shen2023NaturalSpeech] 与 **VoiceBox**[^Le2023VoiceBox] 直接在连续表示上应用扩散机制.
+  - **F5-TTS**[^Chen2024F5-TTS] 则通过流匹配技术实现了高效合成.
+- 自回归范式通常在韵律和变化性方面表现更优, 并具备流式合成能力.
+  - **ARDiT**[^Liu2024ARDiT] 采用自回归扩散 Transformer 进行 TTS, 通过参数共享统一语义一致性与声学自然度.
+  - **DiTAR**[^Jia2025DiTAR] 在此基础上引入基于 Patch 的设计: 使用因果语言模型保证 Patch 间的稳定性, 同时采用双向局部扩散 Transformer 对 Patch 内部进行精细化处理。
+  - **VibeVoice**[^Peng2025VibeVoice] 则采用 下一 Token 扩散策略, 实现长篇幅多说话人语音合成.
 
+- 此外, 近期模型如 **CLEAR**[^Wu2025CLEAR] 与 **FELLE**[^Wang2025FELLE] 聚焦于潜在空间中的自回归建模, 采用 Token 级别的由粗到细层次结构.
+- 而 **MELA-TTS**[^An2025MELA-TTS] 与 **KALL-E**[^Xia2024KALL-E] 则结合联合 Transformer-扩散架构与下一分布预测, 以提升效率与音质.
+
+尽管如此, 连续模型往往将高层语义规划与底层声学渲染耦合在一起, 在缺乏显式解耦的情况下长序列生成容易出现不稳定性.
+
+### Hierarchical and Residual Modeling in TTS: 层次和残差建模
+
+<!--
 Hierarchical and residual approaches decompose TTS into layered tasks to balance stability and expressivity.
 - **HierSpeech++**[^Lee2023HierSpeech++] employed variational inference for semantic-acoustic mapping.
 - **HALL-E**[^Nishimura2024HALL-E] uses hierarchical neural codecs with LLMs for minute-long synthesis.
@@ -191,6 +228,19 @@ Hierarchical and residual approaches decompose TTS into layered tasks to balance
 
 These methods address flaws in prior paradigms: implicit designs lack regulated bottlenecks, tokenizer-dependent models suffer discrete losses, and fragmented stages hinder end-to-end optimization.
 However, few fully integrate explicit residual designs with semi-discrete bottlenecks in a unified framework, as proposed in our work, to achieve implicit disentanglement without external dependencies.
+-->
+层次化与残差方法将 TTS 分解为多个层级任务, 以在稳定性与表现力之间取得平衡.
+- **HierSpeech++**[^Lee2023HierSpeech++] 利用变分推断实现语义到声学的映射;
+- **HALL-E**[^Nishimura2024HALL-E] 结合分层神经编解码器与大语言模型支持分钟级语音合成.
+- **MARS6**[^Baas2025MARS6] 构建了具有分层 Token 的鲁棒编码器-解码器 Transformer.
+- **DiffStyleTTS**[^Liu2024DiffStyleTTS] 应用扩散机制进行分层韵律建模.
+- **HAM-TTS**[^Wang2024HAM-TTS] 引入分层声学建模并结合数据增强实现零样本 TTS.
+- **QTTS**[^Han2025QTTS] 采用分层并行架构处理残差量化编码.
+- 在歌声合成领域, **LeVo**[^Lei2025LeVo] 同样提出了一个分层框架使用两个仅解码器的 Transformer 分别建模歌曲中的混合与分离部分, 显著提升了生成质量.
+
+这些方法旨在解决以往范式的缺陷: 隐式设计缺乏受控瓶颈, 依赖分词器的模型受限于离散化损失, 而割裂的阶段阻碍了端到端优化.
+
+然而, 目前鲜有工作能像本文所提出的方案一样, 在统一框架中完整整合显式残差设计与半离散瓶颈, 从而在无需外部依赖的前提下实现隐式的解耦.
 
 ## 3·Methodology
 
